--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+  <% if current_user %>
+    Signed in as <%= current_user.name %>
+    <%= link_to "Sign Out", signout_path, id: "sign_out" %>
+  <% else %>
+    <%= link_to "Sign in with Google", "/auth/google_oauth2" %>
+  <% end %>
+
 <%= yield %>
 
 </body>
