--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,5 +3,6 @@
     <h3><%= item.name %></h3>
     <%= image_tag item.image_url %>
     <%= item.description %>
+    <%= link_to "Checkout", new_item_borrowing_path(item) %>
   </li>
 <% end %>
